# priceformation

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_MarkupRules.md  TODOS.md  bitbucket-pipelines.yml  common_requirements.txt  dev_requirements.txt  install.sh  make_migration.py  pyproject.toml  run.bat  run.py  run.sh  run_dialog.py  run_mut.py  run_tests.sh  setup.cfg  uninstall.sh
.github/: dependabot.yml
.github/workflows/: python-app.yml
cfg/: __init__.py  color.py  db.py  main.py
core/: __init__.py  async_utils.py  exceptions.py  file_reader.py  init_log.py  log_message.py  wrappers.py
database/: __init__.py  db.py  exception.py  init.sql  init_db.py  nomenclature.py  supplier.py  test.py
database/migrations/: 0001.init.sql
file_attributes/: attributes.xls
integration_tests/: conftest.py  test_four_tochki_real_price.py  test_run_entry.py
integration_tests/file_prices_for_test/four_tochki/: price.xlsx
parse_config/: example_markup_rules.json
parse_config_example/: black_list  four_tochki_markup_rules.json  manufacturer_aliases.json  mim_markup_rules.json  poshk_markup_rules.json  stop_words  vendor_list.json
parsers/: all_vendors.py  common_price.py  xls_reader.py
parsers/base_item_actions/: base_item_action.py  calc_percent_markup_item_action.py
parsers/base_parser/: alias_container.py  base_finder.py  base_parser.py  base_parser_config.py  category_finder.py  log_parser_process.py  manufacturer_finder.py  parse_statistic.py
parsers/data_provider/: __init__.py  black_list.py  manufacturer_aliases.py  markup_rules.py  stop_words.py  vendor_list.py
parsers/row_item/: row_item.py  row_item_formatter.py
parsers/row_item/vendors/: row_item_mim.py
parsers/vendors/: autosnab54_ru.py  greenstone.py  pioner.py  poshk.py  stk.py  zapaska.py  zapaska_rest.py
parsers/vendors/four_tochki/: four_tochki_1sheet.py  four_tochki_2sheet.py  four_tochki_base.py
parsers/vendors/mim/: mim_1sheet.py  mim_2sheet.py  mim_3sheet.py  mim_base.py
parsers/writer/: fake_driver.py  ixls_driver.py  xls_writer.py  xwlt_driver.py
parsers/writer/templates/: all_templates.py  column_helper.py  for_drom.py  for_inner.py  iwrite_template.py
pipelines/: .pylintrc  check_style.sh  install.sh  run_coverage_tests.sh  run_mutation_test.sh  run_tests.sh  setup.cfg  uninstall.sh
pipelines/docker/: run_tests.sh
src/: api_4tochki.py  row_item_new.py  run.bat  run.py  run.sh  run_dialog.py
src/cfg/: __init__.py  db.py  main.py
src/core/: __init__.py  async_utils.py  exceptions.py  file_reader.py  init_log.py  log_message.py  wrappers.py
src/database/: db.py  exception.py  init_db.py  nomenclature.py  supplier.py
src/external_api/: api_4tochki.py
src/parse_config/: README_MarkupRules.md
src/parsers/: all_vendors.py  common_price.py  common_price_grouper.py  common_price_output.py  fake_xls_reader.py  xls_reader.py
src/parsers/base_item_actions/: base_item_action.py  calc_percent_markup_item_action.py
src/parsers/base_parser/: alias_container.py  base_finder.py  base_parser.py  base_parser_config.py  category_finder.py  log_parser_process.py  manufacturer_finder.py  nomenclature_correction.py  parse_statistic.py
src/parsers/data_provider/: __init__.py  black_list.py  manufacturer_aliases.py  markup_rules.py  stop_words.py  vendor_list.py
src/parsers/row_item/: row_item.py  row_item_formatter.py
src/parsers/vendors/: autosnab54_ru.py  pioner.py  poshk.py  stk.py  zapaska.py  zapaska_disk.py  zapaska_disk_json.py  zapaska_rest.py  zapaska_tire.py  zapaska_tire_json.py
src/parsers/writer/: fake_driver.py  ixls_driver.py  xls_writer.py  xwlt_driver.py
src/services/: make_migration.py
tests/: conftest.py  test_run.py  test_run_dialog.py
tests/test_base_parser/: test_category_finder.py  test_manufacturer_finder.py  test_nomenclature_correction.py
tests/test_cfg/: test_color.py
tests/test_core/: test_async_utils.py  test_exceptions.py  test_file_reader.py  test_init_log.py  test_log_message.py  test_log_message_helpers.py  test_logging.py
tests/test_database/: test_db.py
tests/test_parsers/: test_common_price.py  test_common_price_grouper.py  test_common_price_output.py  test_xls_reader.py
tests/test_parsers/fixtures/: four_tochki_sheet1.py  four_tochki_sheet2.py  mim_sheet1.py  mim_sheet2.py  pioner.py  poshk.py  price.xlsx  price_old.xls  price_pioner.xlsx  zapaska.py  (+2 more)
tests/test_row_item/: test_row_item_formatter.py
(+49 files in other folders)
