[project]
name = "priceformation"
version = "0.1.0"
description = ""
authors = [{ name = "va.kasyanov" }]
requires-python = "==3.13.*,<4"
readme = "README.md"
dependencies = [
    "openpyxl==3.1.5",
    "termcolor==3.2.0",
    "colorama==0.4.6",
    "python_calamine==0.5.4",
]

[dependency-groups]
dev = [
    "pytest==7.3.1",
    "pyright==1.1.407",
    "pytest-cov==7.0.0",
    "pylint-pytest==1.1.8",
    "black==25.11.0",
    "pylint==4.0.3",
    "ruff==0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

line-length = 120
ignore=["B019", "A003", "S324"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
"core/log_message.py" = ["T201"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"