[project]
name = "priceformation"
version = "0.1.0"
description = ""
authors = [{ name = "va.kasyanov" }]
requires-python = "==3.13.*,<4"
readme = "README.md"
dependencies = [
    "openpyxl==3.1.5",
    "termcolor==3.2.0",
    "colorama==0.4.6",
    "python_calamine==0.5.4",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "mutmut==3.4.0",
    "pyright==1.1.407",
    "pytest-cov==7.0.0",
    "black==25.11.0",
    "pylint==4.0.3",
    "ruff==0.14.5",
    "pytest-testmon==2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

line-length = 120
ignore=["B019", "A003", "S324"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
"core/log_message.py" = ["T201"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "build",
    "dist",
]

[tool.mutmut]
paths_to_mutate = [ "src/" ]
backup="False"
runner='python -m pytest -x -q --tb=no --testmon -o addopts="" '
tests_dir= [ "tests/" ]
mutate_only_covered_lines=true