[project]
name = "priceformation"
version = "0.1.0"
description = "A utility for small businesses. It simplifies working with price lists from tire suppliers."
authors = [{ name = "Vladimir Kasyanov", email = "va.kasyanov81@yandex.ru" }]
requires-python = "==3.13.*,<4"
readme = "README.md"
dependencies = [
    "openpyxl==3.1.5",
    "termcolor==3.3.0",
    "colorama==0.4.6",
    "python_calamine==0.6.1",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "mutmut==3.4.0",
    "pyright==1.1.408",
    "pytest-cov==7.0.0",
    "black==26.1.0",
    "pylint==4.0.4",
    "ruff==0.14.11",
    "pytest-testmon==2.2.0",
    "pytest-randomly==4.0.1",
    "pytest-xdist==3.8.0",
    "wemake-python-styleguide==1.5.0",
    "mypy==1.19.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["src"]
sources = ["src"]

[tool.black]
line-length = 120
preview = true
skip-string-normalization = true # we use '
target-version = [ 'py311' ]
# Exclude intentionally bad files:
extend-exclude = '''
(
  tests/.*/__snapshots__/.* | tests/fixtures/.*
)
'''

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

line-length = 120
ignore=["B019", "A003", "S324"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]
"core/log_message.py" = ["T201"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

addopts = [
    "--strict-config",
    # pytest-xdist
    "-n=2",
    # pytest-cov
    "--cov=src",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=10",
]
norecursedirs = [
    ".git",
    "build",
    "dist",
]

[tool.mutmut]
paths_to_mutate = [ "src/" ]
backup="False"
pytest_add_cli_args = [ "--cov-reset", "-n=0" ]
tests_dir= [ "tests/" ]
mutate_only_covered_lines=true

[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
ignore_missing_imports = true
strict = true
local_partial_types = true
warn_unreachable = true